--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.2",
     "vue-directive-tooltip": "^1.4.2",
     "vue-lazyload": "^1.2.1",
+    "vue-progressive-image": "^2.4.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
