--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -14,9 +14,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "animejs": "^2.2.0",
     "vue": "^2.5.2",
     "vue-directive-tooltip": "^1.4.2",
     "vue-lazyload": "^1.2.1",
+    "vue-popperjs": "^1.2.5",
     "vue-progressive-image": "^2.4.4",
     "vue-router": "^3.0.1"
   },
