--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -15,12 +15,20 @@
   },
   "dependencies": {
     "animejs": "^2.2.0",
+    "gsap": "^1.20.4",
+    "scrollmagic": "^2.0.5",
+    "scrolltrigger-classes": "^0.3.6",
     "vue": "^2.5.2",
     "vue-directive-tooltip": "^1.4.2",
     "vue-lazyload": "^1.2.1",
     "vue-popperjs": "^1.2.5",
     "vue-progressive-image": "^2.4.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-scroll": "^2.1.7",
+    "vue-scroll-behavior": "^0.2.0",
+    "vue-scrollmonitor": "^0.1.0",
+    "vue-waypoint": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
