--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "animejs": "^2.2.0",
+    "awesome-mask": "^1.1.1",
     "gsap": "^1.20.4",
     "scrollmagic": "^2.0.5",
     "scrolltrigger-classes": "^0.3.6",
+    "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
     "vue-directive-tooltip": "^1.4.2",
     "vue-lazyload": "^1.2.1",
@@ -28,6 +30,7 @@
     "vue-scroll-behavior": "^0.2.0",
     "vue-scrollmonitor": "^0.1.0",
     "vue-waypoint": "^3.0.3",
+    "vuejs-datepicker": "^0.9.29",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
