--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "animejs": "^2.2.0",
     "awesome-mask": "^1.1.1",
+    "basicscroll": "^2.1.0",
     "gsap": "^1.20.4",
     "scrollmagic": "^2.0.5",
     "scrolltrigger-classes": "^0.3.6",
