Add registration controller for registration.

--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -18,6 +18,8 @@
     "awesome-mask": "^1.1.1",
     "basicscroll": "^2.1.0",
     "gsap": "^1.20.4",
+    "idb-keyval": "^2.3.0",
+    "moment": "^2.21.0",
     "scrollmagic": "^2.0.5",
     "scrolltrigger-classes": "^0.3.6",
     "vee-validate": "^2.0.5",
