--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -20,6 +20,7 @@
     "gsap": "^1.20.4",
     "idb-keyval": "^2.3.0",
     "moment": "^2.21.0",
+    "postcss-nested": "^3.0.0",
     "scrollmagic": "^2.0.5",
     "scrolltrigger-classes": "^0.3.6",
     "vee-validate": "^2.0.5",
@@ -85,6 +86,8 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.15",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "selenium-server": "^3.6.0",
@@ -92,6 +95,8 @@
     "shelljs": "^0.7.8",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
+    "stylelint": "^9.1.3",
+    "stylelint-webpack-plugin": "^0.10.3",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
