--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "animejs": "^2.2.0",
     "awesome-mask": "^1.1.1",
+    "axios": "^0.18.0",
     "basicscroll": "^2.1.0",
     "gsap": "^1.20.4",
     "idb-keyval": "^2.3.0",
@@ -64,7 +65,7 @@
     "eslint-plugin-node": "^5.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
