--- a/ori/theme/ori_app/.editorconfig
+++ b/ori/theme/ori_app/.editorconfig
@@ -10,8 +10,8 @@ insert_final_newline = true
 charset = utf-8
 
 [*.js]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = tab
 
 [*.scss]
 indent_size = 4
@@ -28,6 +28,9 @@ indent_style = tab
 indent_size = tab
 indent_style = tab
 
+[*.vue]
+indent_style = tab
+indent_size = tab
 
 [{bower.json,package.json,.travis.yml}]
 indent_style = space
