--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -19,6 +19,7 @@
     "awesome-mask": "^1.1.1",
     "axios": "^0.18.0",
     "basicscroll": "^2.1.0",
+    "driver.js": "^0.3.6",
     "gsap": "^1.20.4",
     "idb-keyval": "^2.3.0",
     "moment": "^2.21.0",
