--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 certifi==2018.1.18
 chardet==3.0.4
-Django==1.11.4
+Django==1.11
+django-appconf==1.0.2
+django-cors-headers==2.2.0
+django-imagekit==4.0.2
 django-jet==1.0.6
 django-model-utils==3.0.0
 django-sendsms==0.2.3
+djangorestframework==3.7.7
 idna==2.6
 jsonfield==2.0.2
 olefile==0.44
+pilkit==2.0
 Pillow==4.2.1
 psycopg2==2.7.3
 PyJWT==1.5.3
 PySocks==1.6.8
-pytz==2017.2
+pytz==2018.3
 raven==6.3.0
 requests==2.18.4
 singlemodeladmin==0.8
