--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -12,7 +12,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "storybook": "start-storybook -p 9001 -c storybook"
+    "storybook": "start-storybook -p 9001 -c src/storybook"
   },
   "dependencies": {
     "animejs": "^2.2.0",
