--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "basicscroll": "^2.1.0",
     "driver.js": "^0.3.6",
+    "eslint-plugin-vue": "^4.4.0",
     "gsap": "^1.20.4",
     "idb-keyval": "^2.3.0",
     "moment": "^2.21.0",
@@ -62,11 +63,13 @@
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eslint": "^4.9.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
