--- a/ori/theme/ori_app/package.json
+++ b/ori/theme/ori_app/package.json
@@ -24,6 +24,7 @@
     "gsap": "^1.20.4",
     "idb-keyval": "^2.3.0",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.10",
     "moment": "^2.21.0",
     "postcss-nested": "^3.0.0",
     "scrollmagic": "^2.0.5",
